<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ayetlaeufferzangui.freeyourstuff.Settings.SettingsFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:id="@+id/photoProfil"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20dp"/>


        <android.support.v7.widget.AppCompatButton
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/loginButton"
            android:layout_margin="30dp"
            />


        <android.support.v7.widget.AppCompatButton
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/offerDemandButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/offerDemandButton"
            android:layout_margin="30dp"
            />


        <android.support.v7.widget.AppCompatButton
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/profileButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/profileButton"
            android:layout_margin="30dp"
            />

        <android.support.v7.widget.AppCompatButton
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/helpButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/helpButton"
            android:layout_margin="30dp"
            />

        <android.support.v7.widget.AppCompatButton
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/logoutButton"
            android:layout_margin="30dp"
            />
    </LinearLayout>



</RelativeLayout>
