<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ayetlaeufferzangui.freeyourstuff.CreateItem.CreateItemActivity">


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_item"
            android:gravity="center"
            android:textSize="30dp"/>



        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="fill_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!-- TITLE -->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/title_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title"/>
                </android.support.design.widget.TextInputLayout>

                <!-- CATEGORY -->
                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/category_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/category"
                    app:met_floatingLabel="highlight"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    />

                <!-- DESCRIPTION -->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/description_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/description"/>
                </android.support.design.widget.TextInputLayout>

                <!-- PHOTO  -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/photo"
                        android:textSize="17dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="5dp" />
                    <Button
                        android:id="@+id/buttonSelectPhoto"
                        android:layout_height="40dp"
                        android:layout_width="40dp"
                        android:gravity="center"
                        android:background="@drawable/drawable_button_photo_library"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"/>
                    <Button
                        android:id="@+id/buttonTakePhoto"
                        android:layout_height="40dp"
                        android:layout_width="40dp"
                        android:gravity="center"
                        android:background="@drawable/drawable_button_photo_camera"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"/>
                    <TextView
                        android:id="@+id/checkPhoto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/photo_not_selected"/>
                </LinearLayout>


                <!-- ADDRESS -->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/address_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address"/>
                </android.support.design.widget.TextInputLayout>

                <!-- PHONE -->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/phone_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone"
                        android:inputType="phone"/>
                </android.support.design.widget.TextInputLayout>

                <!-- AVAILABILITY -->
                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/availability_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/availability"
                    app:met_floatingLabel="highlight"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"/>

                <!-- SUBMIT -->
                <Button
                    android:id="@+id/button"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/submit"
                    android:gravity="center"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>
