<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- DISTANCE -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_location_on_black_24dp"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance"
                    android:textSize="25dp"
                    android:layout_marginLeft="20dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="15dp">

                <SeekBar
                    android:id="@+id/distance_seek_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/MyMaterialTheme.Base"
                    android:max="49"/>

                <TextView
                    android:id="@+id/distance_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    android:gravity="center_horizontal"/>

            </LinearLayout>

        </LinearLayout>


        <!-- CATEGORY -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_label_outline_black_24dp"
                    android:layout_gravity="center" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textSize="25dp"
                    android:layout_marginLeft="20dp"/>
            </LinearLayout>
            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/category_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/category"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorAccent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                />
        </LinearLayout>


        <!-- AVAILABILITY -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_location_on_black_24dp"
                    android:layout_gravity="center" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/availability"
                    android:textSize="25dp"
                    android:layout_marginLeft="20dp"/>
            </LinearLayout>
            <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                android:id="@+id/availability_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/availability"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="@color/colorAccent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                />
        </LinearLayout>


        <!-- BUTTON -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1">
            <android.support.v7.widget.AppCompatButton
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"/>

            <android.support.v7.widget.AppCompatButton
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/submitButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/filter"/>
        </LinearLayout>

    </LinearLayout>



</android.support.constraint.ConstraintLayout>
